--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Annie Use Your Telescope" rel="stylesheet" />
-    <link rel="shortcut icon" href="/img/log.jpeg" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/log.jpeg" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <title>Kebabzamzam</title>
   </head>
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-light">
       <div class="container nav">
         <a class="navbar-brand" href="#">
-          <img src="/img/logo2.png" alt="logo" />
+          <img src="img/logo2.png" alt="logo" />
         </a>
         <h2 class="judul"><em>KEBAB FROZEN ZAMZAM</em></h2>
       </div>
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-sm">
           <div class="container-duo">
-            <img src="/img/beefori1.1.PNG" alt="Avatar" class="image" />
+            <img src="img/beefori1.1.PNG" alt="Avatar" class="image" />
             <div class="overlay">
               <div class="text">
                 <a href="https://shopee.co.id/Kebab-DAGING-(BEEF)-ORI-SIZE-KECIL-Frozen-Zamzam-Kebab-Enak-Kebab-Murah-Homemade-i.21306978.4953253712">Beef Ori</a>
@@ -33,7 +33,7 @@
         </div>
         <div class="col-sm">
           <div class="container-duo">
-            <img src="/img/beefmoza.PNG" alt="Avatar" class="image" />
+            <img src="img/beefmoza.PNG" alt="Avatar" class="image" />
             <div class="overlay">
               <div class="text">
                 <a href="https://shopee.co.id/Kebab-DAGING-(BEEF)-MOZARELLA-MINI-Frozen-Zamzam-FULL-DAGING-enak-murah-hemat-dan-HALAL-i.21306978.5365824019?sp_atk=83cb6eb2-eb37-499c-bcec-69c6b03a452f">Beef Moza</a>
@@ -43,7 +43,7 @@
         </div>
         <div class="col-sm">
           <div class="container-duo">
-            <img src="/img/beefcheese.PNG" alt="Avatar" class="image" />
+            <img src="img/beefcheese.PNG" alt="Avatar" class="image" />
             <div class="overlay">
               <div class="text">
                 <a href="https://shopee.co.id/Kebab-DAGING-KEJU-(BEEF-CHEESE)-uk.kecil-Frozen-Zamzam-Kebab-Enak-Kebab-Murah-Homemade-i.21306978.6653254154?sp_atk=83610a88-f965-49ed-9262-98ad219854e1">Beef cheese</a>
@@ -55,7 +55,7 @@
       <div class="row">
         <div class="col-sm">
           <div class="container-duo">
-            <img src="/img/beefsmoked.PNG" alt="Avatar" class="image" />
+            <img src="img/beefsmoked.PNG" alt="Avatar" class="image" />
             <div class="overlay">
               <div class="text">
                 <a href="https://shopee.co.id/Kebab-Frozen-Zamzam-SOSIS-SMOKED-BBQ-Size-BESAR-Kebab-Enak-Kebab-Murah-Homemade-i.21306978.7953253241?sp_atk=93c561f0-f1dd-4715-82f6-ea63e82aae7a">Kebab Sosis</a>
@@ -65,7 +65,7 @@
         </div>
         <div class="col-sm">
           <div class="container-duo">
-            <img src="/img/kebabayam.PNG" alt="Avatar" class="image" />
+            <img src="img/kebabayam.PNG" alt="Avatar" class="image" />
             <div class="overlay">
               <div class="text">
                 <a href="https://shopee.co.id/Kebab-Frozen-AYAM-(Chicken)-Zam-Zam-Kebab-enak-halal-murah-homemade-i.21306978.6477110928?sp_atk=3bedd09a-7f22-420b-ba90-474c44013ffb">Kebab Ayam</a>
@@ -75,7 +75,7 @@
         </div>
         <div class="col-sm">
           <div class="container-duo">
-            <img src="/img/kebabblack.PNG" alt="Avatar" class="image" />
+            <img src="img/kebabblack.PNG" alt="Avatar" class="image" />
             <div class="overlay">
               <div class="text">
                 <a href="https://shopee.co.id/Kebab-Black-Beef-Ori-Frozen-Zamzam-Kebab-Enak-Kebab-Murah-Homemade-Halalfood-i.21306978.3962506440?sp_atk=10f4d85c-bb14-4608-a890-c7c66896752d">Kebab Black</a>
@@ -87,7 +87,7 @@
       <div class="row">
         <div class="col-sm">
           <div class="container-duo">
-            <img src="/img/canaiori.PNG" alt="Avatar" class="image" />
+            <img src="img/canaiori.PNG" alt="Avatar" class="image" />
             <div class="overlay">
               <div class="text">
                 <a href="https://shopee.co.id/Roti-maryam-Ori-Canai-Ori-Zamzam-Roti-Maryam-Murah-Roti-Maryam-Enak-Homemade-i.21306978.5155135457?sp_atk=f64e1311-1132-4138-b9b1-a16c5255c23e">Canai Ori</a>
@@ -97,7 +97,7 @@
         </div>
         <div class="col-sm">
           <div class="container-duo">
-            <img src="/img/canaicoklat.PNG" alt="Avatar" class="image" />
+            <img src="img/canaicoklat.PNG" alt="Avatar" class="image" />
             <div class="overlay">
               <div class="text">
                 <a href="https://shopee.co.id/Roti-Maryam-Coklat-Canai-Coklat-Enak-Canai-Homemade-i.21306978.7879106241?sp_atk=e7d2854c-be6d-47d3-b721-45166b42a9f5">Canai Coklat</a>
@@ -107,7 +107,7 @@
         </div>
         <div class="col-sm">
           <div class="container-duo">
-            <img src="/img/canaipandan.PNG" alt="Avatar" class="image" />
+            <img src="img/canaipandan.PNG" alt="Avatar" class="image" />
             <div class="overlay">
               <div class="text">
                 <a href="https://shopee.co.id/Roti-Maryam-Pandan-Canai-Pandan-Zamzam-Enak-Murah-Halal-i.21306978.9114240608?sp_atk=25eb7fd0-0882-4674-a69c-b45457127388">Canai Pandan</a>
@@ -121,8 +121,8 @@
     <div class="containernew">
       <div class="testimoni bg-light shadow-lg">
         <div class="gambar">
-          <img src="/img/avatar.jpg" alt="testi1" class="rounded-circle imgtes" />
-          <img src="/img/bintang.png" alt="bintang" class="bintang d-block" />
+          <img src="img/avatar.jpg" alt="testi1" class="rounded-circle imgtes" />
+          <img src="img/bintang.png" alt="bintang" class="bintang d-block" />
         </div>
         <div class="tulisan">
           <p>Kualitas bagus semoga cocok dan bisa buat langganan sukses buat penjual.</p>
@@ -131,8 +131,8 @@
       </div>
       <div class="testimoni bg-light shadow-lg testibesar">
         <div class="gambar">
-          <img src="/img/avatar.jpg" alt="testi1" class="rounded-circle imgtes" />
-          <img src="/img/bintang.png" alt="bintang" class="bintang d-block" />
+          <img src="img/avatar.jpg" alt="testi1" class="rounded-circle imgtes" />
+          <img src="img/bintang.png" alt="bintang" class="bintang d-block" />
         </div>
         <div class="tulisan">
           <p>Masyaallah, syuka banget sama kebab ini isinya banyak dan padet, kalau beli satu kurang sekalian beli banyak hehe, soalnya seenak itu, ditambah harganya juga terjangkau dapat lima juga.</p>
@@ -141,8 +141,8 @@
       </div>
       <div class="testimoni bg-light shadow-lg">
         <div class="gambar">
-          <img src="/img/avatar.jpg" alt="testi1" class="rounded-circle imgtes" />
-          <img src="/img/bintang.png" alt="bintang" class="bintang d-block" />
+          <img src="img/avatar.jpg" alt="testi1" class="rounded-circle imgtes" />
+          <img src="img/bintang.png" alt="bintang" class="bintang d-block" />
         </div>
         <div class="tulisan">
           <p>Terjangaku banget pas dikantong, packingnya rapi banget, maknyussss full daging. Sellernya sangat ramah kapan-kapan order lagi</p>
@@ -154,10 +154,10 @@
     <div class="contianer-fluid backgroundfo">
       <footer class="fo">
         <div class="footerlogo">
-          <a href="http://wa.me/6285707193262"><img src="/img/wa.png" alt="wa" class="imgwa" /></a>
-          <a href="https://www.instagram.com/kebab.zamzam/?hl=id"><img src="/img/insta.png" alt="instagram" class="imginsta" /></a>
-          <a href="https://www.tokopedia.com/kebabfrozenzamzam"><img src="/img/toped.png" alt="tokopedia" class="imgtoped" /></a>
-          <a href="https://shopee.co.id/kebabfrozenzamzam?categoryId=100629&itemId=4953253712"><img src="/img/shopee.png" alt="imgshopee" class="imgshope" /></a>
+          <a href="http://wa.me/6285707193262"><img src="img/wa.png" alt="wa" class="imgwa" /></a>
+          <a href="https://www.instagram.com/kebab.zamzam/?hl=id"><img src="img/insta.png" alt="instagram" class="imginsta" /></a>
+          <a href="https://www.tokopedia.com/kebabfrozenzamzam"><img src="img/toped.png" alt="tokopedia" class="imgtoped" /></a>
+          <a href="https://shopee.co.id/kebabfrozenzamzam?categoryId=100629&itemId=4953253712"><img src="img/shopee.png" alt="imgshopee" class="imgshope" /></a>
         </div>
         <p class="copyright">© KebabZamzam By Anryan, Inc. All rights reserved</p>
       </footer>
