fix eror image card 1

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-sm">
           <div class="container-duo">
-            <img src="img/beefori1.1.PNG" alt="Avatar" class="image" />
+            <img src="img/beefori1.1.png" alt="Avatar" class="image" />
             <div class="overlay">
               <div class="text">
                 <a href="https://shopee.co.id/Kebab-DAGING-(BEEF)-ORI-SIZE-KECIL-Frozen-Zamzam-Kebab-Enak-Kebab-Murah-Homemade-i.21306978.4953253712">Beef Ori</a>
