--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <a href="https://www.tokopedia.com/kebabfrozenzamzam"><img src="img/toped.png" alt="tokopedia" class="imgtoped" /></a>
           <a href="https://shopee.co.id/kebabfrozenzamzam?categoryId=100629&itemId=4953253712"><img src="img/shopee.png" alt="imgshopee" class="imgshope" /></a>
         </div>
-        <p class="copyright">Copyright © KebabZamzam By Anryan, Inc. All rights reserved</p>
+        <p class="copyright">Copyright © KebabZamzam By Anryan.</p>
       </footer>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
